simplified database - now only 1 table!

--- a/app/src/main/res/layout-w900dp/commodity_list.xml
+++ b/app/src/main/res/layout-w900dp/commodity_list.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
@@ -23,8 +21,6 @@
         android:name="info.santhosh.evlo.CommodityListFragment"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
         tools:context="info.santhosh.evlo.CommodityListActivity"
         tools:listitem="@layout/commodity_list_content" />
@@ -33,6 +29,8 @@
         android:id="@+id/commodity_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="1"
+        tools:context="info.santhosh.evlo.CommodityListActivity"
+        tools:layout="@layout/commodity_detail"/>
 
 </LinearLayout>
