--- a/app/src/main/res/layout/commodity_detail.xml
+++ b/app/src/main/res/layout/commodity_detail.xml
@@ -1,9 +1,25 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/commodity_detail"
-    style="?android:attr/textAppearanceLarge"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:textIsSelectable="true"
-    tools:context="info.santhosh.evlo.CommodityDetailFragment" />
+    tools:context="info.santhosh.evlo.CommodityDetailFragment"
+    android:orientation="vertical">
+    <TextView
+        android:id="@+id/commodity_detail_name"
+        style="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        tools:text="Basmati"
+        android:textIsSelectable="true"
+        tools:context="info.santhosh.evlo.CommodityDetailFragment" />
+
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/commodity_detail_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"
+        tools:listitem="@layout/commodity_detail_card_row" />
+</LinearLayout>
