--- a/app/src/main/res/layout/commodity_list_content.xml
+++ b/app/src/main/res/layout/commodity_list_content.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView android:id="@+id/commodity_name"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/text_margin"
-    android:textAppearance="?attr/textAppearanceListItem"
-    android:textStyle="bold"
-    tools:text="Onion"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" />
+    android:id="@+id/commodity_row"
+    android:clickable="true"
+    android:orientation="horizontal">
+    <TextView android:id="@+id/commodity_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/text_margin_left"
+        android:layout_marginStart="@dimen/text_margin_left"
+        android:layout_marginTop="@dimen/text_margin"
+        android:layout_marginBottom="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textStyle="bold"
+        tools:text="Onion" />
+</LinearLayout>
