--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_margin_left">16dp</dimen>
+    <dimen name="card_padding_large">16dp</dimen>
+    <dimen name="card_padding_medium">4dp</dimen>
 </resources>
