--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -1,119 +1,85 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="16dp">
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    app:elevation="2dp"
+    app:elevation="8dp"
     app:cardPreventCornerOverlap="false"
     android:foreground="?selectableItemBackground">
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:useDefaultMargins="true"
+        android:columnCount="2">
 
         <TextView
             android:id="@+id/text_variety"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:textStyle="bold"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingTop="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="@dimen/card_padding_medium"
             tools:text="Basmati"
+            android:layout_row="0"
             android:ellipsize="end"
-            android:maxLines="1" />
+            android:layout_columnSpan="1"
+            android:maxLines="1"
+            android:layout_gravity="center" />
 
         <TextView
             android:id="@+id/text_modal_price"
+            android:layout_row="0"
             style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="4dp"
-            tools:text="Modal price: 3950"
-            android:maxLines="1"
-            android:ellipsize="end" />
+            android:layout_columnSpan="1"
+            tools:text="\u20B9 3950"
+            android:layout_gravity="end" />
 
         <TextView
-            android:id="@+id/text_minimum_price"
+            android:id="@+id/text_market_district"
+            android:layout_row="1"
             style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="4dp"
-            tools:text="Minimum price: 3900"
+            tools:text="Chirala market, Prakasam district"
+            android:ellipsize="end"
+            android:layout_columnSpan="2"
             android:maxLines="1"
-            android:ellipsize="end" />
-
-        <TextView
-            android:id="@+id/text_maximum_price"
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="4dp"
-            tools:text="Maximum price: 4000"
-            android:maxLines="1"
-            android:ellipsize="end" />
-
-        <TextView
-            android:id="@+id/text_date"
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="4dp"
-            tools:text="Arrival date: 30/04/2016"
-            android:maxLines="1"
-            android:ellipsize="end" />
-
-        <TextView
-            android:id="@+id/text_market_name"
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="4dp"
-            tools:text="Market: Chirala"
-            android:maxLines="1"
-            android:ellipsize="end" />
-
-        <TextView
-            android:id="@+id/text_district_name"
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="4dp"
-            tools:text="District: Prakasam"
-            android:maxLines="1"
-            android:ellipsize="end" />
+            android:layout_gravity="left" />
 
         <TextView
             android:id="@+id/text_state_name"
+            android:layout_row="2"
             style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/card_padding_large"
-            android:paddingRight="@dimen/card_padding_large"
-            android:paddingBottom="4dp"
-            tools:text="State: Andhra Pradesh"
+            tools:text="Andhra Pradesh"
+            android:ellipsize="end"
+            android:layout_columnSpan="2"
             android:maxLines="1"
-            android:ellipsize="end" />
-    </LinearLayout>
+            android:layout_gravity="left" />
+
+        <LinearLayout
+            android:layout_row="3"
+            android:layout_columnSpan="2"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="right">
+
+            <ImageView
+                android:id="@+id/share_icon"
+                android:layout_width="wrap_content"
+                android:padding="8dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_share_grey600_24dp"
+                android:contentDescription="@string/share_content" />
+
+            <ImageView
+                android:id="@+id/favorite_icon"
+                android:padding="8dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_favorite_grey600_24dp"
+                android:contentDescription="@string/favorite_content"
+                android:layout_width="wrap_content" />
+
+        </LinearLayout>
+    </GridLayout>
+
 
 </android.support.v7.widget.CardView>
-</LinearLayout>
