--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -11,23 +11,27 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:useDefaultMargins="true"
         android:columnCount="2">
 
         <TextView
             android:id="@+id/text_variety"
+            android:paddingLeft="@dimen/card_text_horizontal_padding"
+            android:paddingRight="@dimen/card_text_horizontal_padding"
+            android:paddingTop="@dimen/card_primary_text_top_padding"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:textStyle="bold"
             tools:text="Basmati"
             android:layout_row="0"
             android:ellipsize="end"
             android:layout_columnSpan="1"
-            android:maxLines="1"
+            android:maxLines="2"
             android:layout_gravity="center" />
 
         <TextView
+            android:paddingLeft="@dimen/card_text_horizontal_padding"
+            android:paddingRight="@dimen/card_text_horizontal_padding"
+            android:paddingTop="@dimen/card_primary_text_top_padding"
             android:id="@+id/text_modal_price"
-            android:layout_row="0"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,30 +40,31 @@
             android:layout_gravity="end" />
 
         <TextView
+            android:paddingLeft="@dimen/card_text_horizontal_padding"
+            android:paddingRight="@dimen/card_text_horizontal_padding"
+            android:paddingTop="@dimen/card_subtitle_text_top_padding"
             android:id="@+id/text_market_district"
-            android:layout_row="1"
             style="@style/TextAppearance.AppCompat.Body1"
             tools:text="Chirala market, Prakasam district"
-            android:ellipsize="end"
             android:layout_columnSpan="2"
-            android:maxLines="1"
-            android:layout_gravity="left" />
+            android:maxLines="2"
+            android:layout_gravity="start" />
 
         <TextView
+            android:paddingLeft="@dimen/card_text_horizontal_padding"
+            android:paddingRight="@dimen/card_text_horizontal_padding"
+            android:paddingTop="@dimen/card_subtitle_text_top_padding"
             android:id="@+id/text_state_name"
-            android:layout_row="2"
             style="@style/TextAppearance.AppCompat.Body1"
             tools:text="Andhra Pradesh"
             android:ellipsize="end"
             android:layout_columnSpan="2"
             android:maxLines="1"
-            android:layout_gravity="left" />
+            android:layout_gravity="start" />
 
         <LinearLayout
-            android:layout_row="3"
             android:layout_columnSpan="2"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="right">
 
             <ImageView
