--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:elevation="8dp"
+    android:layout_margin="@dimen/card_layout_margin"
+    app:elevation="@dimen/card_elevation"
     app:cardPreventCornerOverlap="false"
     android:foreground="?selectableItemBackground">
 
@@ -70,6 +70,7 @@
             <ImageView
                 android:id="@+id/share_icon"
                 android:layout_width="wrap_content"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:padding="@dimen/card_action_button_padding"
                 android:layout_margin="@dimen/card_action_button_margin"
@@ -82,6 +83,7 @@
                 android:layout_margin="@dimen/card_action_button_margin"
                 android:padding="@dimen/card_action_button_padding"
                 android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:layout_height="wrap_content"
                 android:src="@drawable/favorite_state_list"
                 android:contentDescription="@string/favorite_content"
