--- a/app/src/main/res/layout-sw600dp/commodity_list.xml
+++ b/app/src/main/res/layout-sw600dp/commodity_list.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,22 +14,14 @@
     
     -->
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/commodity_list"
-        android:name="info.santhosh.evlo.CommodityListFragment"
-        android:layout_width="@dimen/item_width"
-        android:layout_height="match_parent"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="info.santhosh.evlo.CommodityListActivity"
-        tools:listitem="@layout/commodity_list_content" />
+    <include layout="@layout/commodity_recycler_view" />
 
     <FrameLayout
         android:id="@+id/commodity_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        tools:context="info.santhosh.evlo.CommodityListActivity"
+        tools:context="info.santhosh.evlo.CommodityDetailActivity"
         tools:layout="@layout/commodity_detail"/>
 
 </LinearLayout>
