--- a/app/src/main/res/layout/commodity_list.xml
+++ b/app/src/main/res/layout/commodity_list.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/commodity_list"
-    android:name="info.santhosh.evlo.CommodityListFragment"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="info.santhosh.evlo.CommodityListActivity"
-    tools:listitem="@layout/commodity_list_content" />
+    android:layout_height="match_parent">
+    <include layout="@layout/commodity_recycler_view"/>
+</FrameLayout>
