--- a/app/src/main/res/layout-sw600dp/commodity_list.xml
+++ b/app/src/main/res/layout-sw600dp/commodity_list.xml
@@ -6,7 +6,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context="info.santhosh.evlo.CommodityListActivity">
+    tools:context="info.santhosh.evlo.ui.CommodityListActivity">
 
     <!--
     This layout is a two-pane layout for the Commodities
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        tools:context="info.santhosh.evlo.CommodityDetailActivity"
+        tools:context="info.santhosh.evlo.ui.CommodityDetailActivity"
         tools:layout="@layout/commodity_detail"/>
 
 </LinearLayout>
