--- a/app/src/main/res/layout/activity_commodity_detail.xml
+++ b/app/src/main/res/layout/activity_commodity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.santhosh.evlo.CommodityDetailActivity"
+    tools:context="info.santhosh.evlo.ui.CommodityDetailActivity"
     tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
