--- a/app/src/main/res/layout/commodity_detail.xml
+++ b/app/src/main/res/layout/commodity_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightGray"
-    tools:context="info.santhosh.evlo.CommodityDetailFragment"
+    tools:context="info.santhosh.evlo.ui.CommodityDetailFragment"
     android:orientation="vertical">
     <TextView
         android:id="@+id/commodity_detail_name"
@@ -15,7 +15,7 @@
         android:text="@string/price_unit"
         tools:text="@string/price_unit"
         android:textIsSelectable="true"
-        tools:context="info.santhosh.evlo.CommodityDetailFragment" />
+        tools:context="info.santhosh.evlo.ui.CommodityDetailFragment" />
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
