--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorListRowSelect">#E9EBEB</color>
-    <color name="lightGray">#DFDFDF</color>
+    <color name="lightGray">#EEEEEE</color>
+    <color name="dividerGrey">#DDD</color>
 </resources>
