--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -1,117 +1,117 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:layout_margin="@dimen/card_layout_margin"
-    app:elevation="@dimen/card_elevation"
-    app:cardPreventCornerOverlap="false"
-    android:foreground="?selectableItemBackground">
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/text_variety"
             style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:paddingEnd="4dp"
+            android:paddingLeft="0dp"
+            android:paddingRight="4dp"
+            android:paddingStart="0dp"
+            android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/guideline"
+            app:layout_constraintRight_toLeftOf="@+id/text_modal_price"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintTop_creator="1"
-            tools:text="Basmati, Normal Variety"
-            android:layout_marginTop="12dp" />
+            tools:text="Arecal betlanut long text faking, Normal Variety long text I want to ellipsise"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
             android:id="@+id/text_modal_price"
-            style="@style/TextAppearance.AppCompat.Body2"
+            style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="\u20B9 3950"
-            tools:layout_constraintRight_creator="1"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/text_variety" />
-
-        <TextView
-            android:id="@+id/text_market_district"
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="12dp"
-            android:maxLines="2"
-            android:paddingEnd="16dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="16dp"
-            android:paddingStart="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/text_variety"
-            tools:text="Chirala market, Prakasam district" />
-
-        <TextView
-            android:id="@+id/text_state_name"
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            tools:text="Andhra Pradesh"
-            android:layout_marginTop="12dp"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/text_market_district" />
-
-        <ImageView
-            android:id="@+id/favorite_icon"
-            android:layout_width="0dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:padding="@dimen/card_action_button_padding"
-            android:layout_height="wrap_content"
-            android:src="@drawable/favorite_state_list"
-            android:contentDescription="@string/share_content"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="4dp" />
-
-
-        <ImageView
-            android:id="@+id/share_icon"
-            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:contentDescription="@string/favorite_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="@dimen/card_action_button_padding"
-            android:src="@drawable/ic_share_grey600_24dp"
-            app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
-            app:layout_constraintTop_toTopOf="@+id/text_state_name"
-            app:layout_constraintVertical_bias="0.0"
-            android:layout_marginBottom="4dp" />
+            android:layout_marginTop="8dp"
+            android:textStyle="bold"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="\u20B9 3950" />
+
+    <TextView
+        android:id="@+id/text_market_district"
+        style="@style/TextAppearance.AppCompat.Body1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:maxLines="2"
+        android:paddingEnd="16dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="16dp"
+        android:paddingStart="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/text_variety"
+        tools:text="Chirala market, Prakasam district" />
+
+    <TextView
+        android:id="@+id/text_state_name"
+        style="@style/TextAppearance.AppCompat.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingEnd="16dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="16dp"
+        android:paddingStart="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline"
+        tools:text="Andhra Pradesh"
+        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_market_district" />
+
+    <ImageView
+        android:id="@+id/favorite_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:padding="@dimen/card_action_button_padding"
+        android:src="@drawable/favorite_state_list"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/share_icon"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/share_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:contentDescription="@string/favorite_content"
+        android:padding="@dimen/card_action_button_padding"
+        android:src="@drawable/ic_share_grey600_24dp"
+        app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
 
-        <android.support.constraint.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline"
-            android:orientation="vertical"
-            tools:layout_editor_absoluteY="29dp"
-            tools:layout_editor_absoluteX="20dp"
-            app:layout_constraintGuide_begin="16dp" />
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="16dp"
+        app:layout_constraintGuide_begin="16dp" />
 
-    </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
