--- a/app/src/main/res/layout/commodity_detail.xml
+++ b/app/src/main/res/layout/commodity_detail.xml
@@ -3,22 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
+    android:background="@color/almostWhite"
     tools:context="info.santhosh.evlo.ui.CommodityDetailFragment"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/commodity_detail_name"
-        style="@style/TextAppearance.AppCompat.Body2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="@string/price_unit"
-        tools:text="@string/price_unit"
-        android:textIsSelectable="true"
-        tools:context="info.santhosh.evlo.ui.CommodityDetailFragment" />
-
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/commodity_detail_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
