--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <style name="bottomBarTheme" parent="AppTheme">
         <!--ripple color of bottom bar-->
-        <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/ripple_bottombar</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
