--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/search_commodities"
         android:title="@string/search_hint"
-        android:icon="@drawable/ic_search_white_24dp"
+        android:icon="@drawable/ic_search_grey"
         app:showAsAction="collapseActionView|always"
         app:actionViewClass="android.support.v7.widget.SearchView" />
     <item android:id="@+id/action_refresh"
