--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--Material palette: Teal-->
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="teal_500">#009688</color> <!-- Primary -->
+    <color name="teal_700">#00796B</color>  <!-- Primary Dark -->
+    <color name="teal_A100">#A7FFEB</color> <!-- Bottom bar ripple -->
+
+    <!--Material palette: Pink-->
+    <color name="pink_A200">#FF4081</color>  <!-- Accent -->
 
     <color name="colorListRowSelect">#E9EBEB</color>
     <color name="almostWhite">#FFFAFAFA</color>
@@ -13,5 +16,4 @@
 
     <!--bottom bar colors-->
     <color name="inactive_bottombar">#757575</color>
-    <color name="ripple_bottombar">#A7FFEB</color> <!--Teal: A100-->
 </resources>
