--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,8 @@
     <dimen name="card_primary_text_top_padding">24dp</dimen>
     <dimen name="card_subtitle_text_top_padding">12dp</dimen>
     <dimen name="card_text_horizontal_padding">16dp</dimen>
+
+    <!--Search-->
+    <dimen name="search_toolbar_height">64dp</dimen>
+    <dimen name="search_toolbar_margin">8dp</dimen>
 </resources>
