--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <!--Search-->
     <dimen name="search_toolbar_height">64dp</dimen>
     <dimen name="search_toolbar_margin">8dp</dimen>
+    <dimen name="search_title_text_size">14sp</dimen>
 </resources>
