--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,7 +29,7 @@
 
     <style name="SearchToolbar.TitleText"
         parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/search_title_text_size</item>
         <item name="android:textColor">#a0000000</item>
     </style>
 
