--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/main_holder"
-        android:layout_gravity="top"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/search_toolbar_height"
-        android:elevation="4dp"
-        android:background="?colorPrimary">
 
-        <info.santhosh.evlo.ui.search.SearchToolbar
-            android:id="@+id/main_toolbar"
-            app:title="@string/search_hint"
-            app:titleTextAppearance="@style/SearchToolbar.TitleText"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <FrameLayout
+            android:id="@+id/main_holder"
+            android:layout_gravity="top"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/search_toolbar_height"
+            android:elevation="4dp"
+            android:background="?colorPrimary">
+
+            <info.santhosh.evlo.ui.main.SearchToolbar
+                android:id="@+id/main_toolbar"
+                app:title="@string/search_hint"
+                app:titleTextAppearance="@style/SearchToolbar.TitleText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/search_toolbar_margin"
+                android:elevation="8dp" />
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/main_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/search_toolbar_margin"
-            android:elevation="8dp" />
+            tools:background="@color/cardview_shadow_start_color">
+        </FrameLayout>
+    </LinearLayout>
 
-    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
