--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical">
-
-  <info.santhosh.evlo.ui.search.Searchbar
-    android:id="@+id/search_toolbar"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/search_toolbar_height"
-    android:gravity="top" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <info.santhosh.evlo.ui.search.Searchbar
+      android:id="@+id/search_toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/search_toolbar_height"
+      android:gravity="top" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/commodity_list"
+        style="@style/main_recycler_view_style"
+        app:layoutManager="LinearLayoutManager"
+        tools:context="info.santhosh.evlo.ui.CommodityListActivity"
+        tools:listitem="@layout/commodity_list_content"/>
 
 </LinearLayout>
