--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -86,23 +86,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageView
-        android:id="@+id/share_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:contentDescription="@string/favorite_content"
-        android:padding="@dimen/card_action_button_padding"
-        android:src="@drawable/ic_share_grey600_24dp"
-        app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+    <!--<ImageView-->
+        <!--android:id="@+id/share_icon"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginLeft="0dp"-->
+        <!--android:layout_marginTop="0dp"-->
+        <!--android:background="?attr/selectableItemBackgroundBorderless"-->
+        <!--android:clickable="true"-->
+        <!--android:contentDescription="@string/favorite_content"-->
+        <!--android:padding="@dimen/card_action_button_padding"-->
+        <!--android:src="@drawable/ic_share_grey600_24dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="@+id/guideline"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/text_state_name"-->
+        <!--app:layout_constraintVertical_bias="1.0" />-->
 
 
     <android.support.constraint.Guideline
@@ -113,5 +113,25 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="16dp"
         app:layout_constraintGuide_begin="16dp" />
+
+    <TextView
+        android:id="@+id/share_icon"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
+        android:drawableLeft="@drawable/ic_share_grey600_24dp"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_share_grey600_24dp"
+        android:drawableTint="@color/dark_grey"
+        android:gravity="center"
+        android:text="@string/share_content"
+        android:textColor="@color/dark_grey"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name" />
 
 </android.support.constraint.ConstraintLayout>
