--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/teal_500</item>
         <item name="colorPrimaryDark">@color/teal_700</item>
-        <item name="colorAccent">@color/pink_A200</item>
+        <item name="colorAccent">@color/green_A200</item>
     </style>
 
     <style name="bottomBarTheme" parent="AppTheme">
