add clear button to search bar

--- a/app/src/main/res/layout/merge_search.xml
+++ b/app/src/main/res/layout/merge_search.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@null"
-    android:hint="Search for stuff"
+    android:hint="@string/search_hint_detail"
     android:imeOptions="actionSearch"
     android:inputType="text"
     android:maxLines="1" />
