icons finalised and all are vector drawables for api <21

--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -74,11 +74,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
+        android:drawableLeft="@drawable/more_detail_state"
         android:drawablePadding="8dp"
         android:text="@string/details_content"
         android:padding="@dimen/card_action_button_padding"
-        android:drawableStart="@drawable/ic_expand_more_black_24dp"
+        android:drawableStart="@drawable/more_detail_state"
         android:clickable="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
@@ -91,13 +91,14 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:drawableLeft="@drawable/favorite_state_list"
+        android:drawableLeft="@drawable/bookmark_fill"
         android:drawablePadding="8dp"
-        android:drawableStart="@drawable/favorite_state_list"
+        android:drawableStart="@drawable/bookmark_fill"
         android:gravity="center"
         android:padding="@dimen/card_action_button_padding"
         android:text="@string/favorite_content"
         android:textStyle="bold"
+        android:textColor="@color/bookmark_states"
         app:layout_constraintRight_toLeftOf="@+id/share_icon"
         app:layout_constraintLeft_toRightOf="@+id/details_icon"
         app:layout_constraintTop_toTopOf="@+id/details_icon" />
