--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -76,11 +76,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
+        android:drawableLeft="@drawable/more_detail_state"
         android:drawablePadding="8dp"
         android:text="@string/details_content"
         android:padding="@dimen/card_action_button_padding"
-        android:drawableStart="@drawable/ic_expand_more_black_24dp"
+        android:drawableStart="@drawable/more_detail_state"
         android:clickable="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
@@ -93,9 +93,10 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:drawableLeft="@drawable/favorite_state_list"
+        android:drawableLeft="@drawable/bookmark_fill"
         android:drawablePadding="8dp"
-        android:drawableStart="@drawable/favorite_state_list"
+        android:drawableStart="@drawable/bookmark_fill"
+        android:textColor="@color/bookmark_states"
         android:gravity="center"
         android:padding="@dimen/card_action_button_padding"
         android:text="@string/favorite_content"
