--- a/app/src/main/res/layout/commodity_recycler_view.xml
+++ b/app/src/main/res/layout/commodity_recycler_view.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <info.santhosh.evlo.common.EmptyRecyclerView
+    <info.santhosh.evlo.widget.EmptyRecyclerView
         android:id="@+id/commodity_list"
         android:name="info.santhosh.evlo.CommodityListFragment"
         style="@style/main_recycler_view_style"
